--- a/app/css/app.css
+++ b/app/css/app.css
@@ -285,7 +285,7 @@ form
     background-color: white;
     float: right;
     height: 248px;
-    width: 230px;
+    width: 234px;
     margin-bottom: 50px;
 }
 
@@ -569,4 +569,52 @@ div, i
 .clear:after
 {
     clear: both;
+}
+
+.compare-table {  
+    background-color: #eee;  
+    margin-top: 2%;
+    margin-bottom: 2%;
+    width: 100%;
+    border-spacing: 10px;
+    border-collapse: separate;
+}
+
+.compare-table thead {
+    background-color: #ddd;
+}
+.compare-table td {
+
+}
+.compare-table td .inner {
+    margin: 5px;
+    height: 100px;
+    overflow: auto;
+    vertical-align: middle;
+    text-align: center;
+    border-left: solid 1px #333;
+}
+/*
+.compare-table td , .add-product-to-compare {
+    width: 110px;
+    height: 120px;
+    text-align: center;  
+}
+
+.compare-table td {
+    border-left: solid 1px #ccc;
+}*/
+
+.table-space  {
+    height: 20px;  
+}
+
+.add-product-to-compare {
+    border: solid 1px #ccc;
+    background-color: #ddd;
+    color: #ccc;
+    font-size: 30pt;
+    box-shadow: 0 1px 1px 2px #ddd;
+    line-height: 100px;
+    
 }
