--- a/views/search.html
+++ b/views/search.html
@@ -1,16 +1,20 @@
-﻿<div class="chevron-up">
-    <i class="fa fa-chevron-right search-right-arrow"></i>
-    <i class="fa fa-chevron-left search-left-arrow"></i>
-</div>
-
-<div class="products-list-container clear">
-    <div class="products-list-content" ng-style="{'width': (256*productsLine1.length) + 'px'}">
-    <products-list-items products="productsLine1" show-product="showProduct(product)"></products-list-items>
-        <products-list-items products="productsLine2" show-product="showProduct(product)"></products-list-items>
+﻿
+<div class="search-page">
+    
+    <div class="products-list-container clear">
+        <div class="products-list-content" ng-show="productsLine1.length">
+            <products-list-items products="currentProductsPage1" show-product="showProduct(product)"></products-list-items>
+            <products-list-items products="currentProductsPage2" show-product="showProduct(product)"></products-list-items>
         </div>
+    </div>
+    
+    <products-list-navigation step="{{step}}" products-list-length="{{productsLine1.length}}" navigation-info="navigationInfo"></products-list-navigation>
+
 </div>
 
-<div class="chevron-down">
-    <i class="fa fa-chevron-right search-right-arrow"></i>
-    <i class="fa fa-chevron-left search-left-arrow"></i>
-</div>
+<!--<div ng-show="category.products.length" ng-swipe-right="navigateNext()" ng-swipe-left="navigateBack()">
+     <h4 class="products-list-name">{{category.name}}</h4>
+    <products-list-items products="currentProductsPage" show-product="showProduct(product)"></products-list-items>
+    <products-list-navigation step="{{step}}" products-list-length="{{category.products.length}}" navigation-info="navigationInfo"></products-list-navigation>
+    
+</div>-->
