--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,6 @@
-﻿<div class="home-page">
+﻿
+
+<div class="home-page">
     <div class="promotions">
         <div class="main-promotion">
             <div>
@@ -22,10 +24,8 @@
         </div>
 
         <div class="seasonal">
-            <img ng-src="{{ seasonal_image1.promotion}}" alt="{{ seasonal_image1.name }}" />
-            <img ng-src="{{ seasonal_image2.promotion}}" alt="{{ seasonal_image2.name }}" />
-
-
+            <img ng-src="{{ firstPromotion.promotion}}" alt="{{ firstPromotion.name }}" />
+            <img ng-src="{{ secondPromotion.promotion}}" alt="{{ secondPromotion.name }}" />
         </div>
     </div>
 
