--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,4 @@
-﻿
-
-<div class="home-page">
+﻿<div class="home-page">
     <div class="promotions">
         <div class="main-promotion">
             <div>
