selected category path and filters

--- a/views/search.html
+++ b/views/search.html
@@ -1,6 +1,20 @@
 ﻿
 <div class="search-page">
     
+    <div class="full-path">
+        <div class="path">{{fullPath.path}}</div>
+        <div class="path-space"></div>
+        <div class="current-category">{{fullPath.current}}</div>
+        
+    </div>
+    <ul class="filter-path">
+        <li ng-repeat="filter in selectedFilterValues.values" ng-show="isFilterValueEmpty(filter.value)">| {{filter.value.title}} </li>
+    </ul>
+    
+    <div class="clear-filter-path" ng-show="isFilterValueEmpty(selectedFilterValues)">
+        <div class="clear-filter" ng-click="clearSelectedFilterValues()">נקה סינון</div>
+    </div>
+    
     <div class="products-list-container clear">
         <div class="products-list-content" ng-show="productsLine1.length">
             <products-list-items products="currentProductsPage1" show-product="showProduct(product)"></products-list-items>
