--- a/app/css/app.css
+++ b/app/css/app.css
@@ -116,9 +116,10 @@ header
     width: 106px;
 }
 
-.menu-is-open .category {
-    color: white;
-}
+    .menu-is-open .category
+    {
+        color: white;
+    }
 
 .right-buffer
 {
@@ -389,19 +390,17 @@ div, i
 .rating
 {
     position: relative;
-    
 }
 
     .rating .fa
     {
         font-size: 15pt;
         letter-spacing: 1px;
-        color: deepskyblue;
+        color: rgb(6, 181, 240);
         -webkit-transform: scaleX(-1);
-        
     }
 
-    
+
 
 .raters-number
 {
@@ -453,33 +452,30 @@ div, i
 
 .right-arrow, .left-arrow
 {
-    
     position: absolute;
     height: 30px;
     width: 30px;
     border-radius: 25px;
     top: 43%;
-  
 }
 
 .right-arrow
 {
     background-image: url('../img/right-arrow-button.png');
-    background-position-y: 137px; 
-    right: 3px;  
+    background-position-y: 137px;
+    right: 3px;
 }
 
 .left-arrow
 {
     background-image: url('../img/left-arrow-button.png');
     background-position-y: 127px;
-    background-position-x: 2px; 
+    background-position-x: 2px;
     left: 3px;
 }
 
     .left-arrow.disabled, .right-arrow.disabled
     {
-        
     }
 
 .navigation-points
@@ -602,8 +598,8 @@ div, i
     display: none;
 }
 
-.category-container.selected .category-dot, 
-.category-container.expanded .category-dot, 
+.category-container.selected .category-dot,
+.category-container.expanded .category-dot,
 .filter-container.selected .filter-check
 {
     display: block;
@@ -620,14 +616,15 @@ div, i
     margin-right: 10px;
 }
 
-.category-container.selected .category-name, 
-.category-container.expanded .category-name, 
+.category-container.selected .category-name,
+.category-container.expanded .category-name,
 .filter-container.selected .category-name
 {
     margin-right: 30px;
 }
 
-.level1.selected {
+.level1.selected
+{
     color: deepskyblue;
     font-weight: bold;
 }
@@ -779,10 +776,9 @@ div, i
     font-size: 15pt;
 }
 
-.popover {
-    padding-right: 178px;
+.popover
+{
     margin-top: 4px;
-    
 }
 
 .popover-title
@@ -790,7 +786,6 @@ div, i
     padding: 1px;
     background-color: #444;
     border-bottom: 1px solid #444;
-    
 }
 
 .popover-inner
@@ -857,6 +852,53 @@ div, i
     margin-bottom: 13px;
 }
 
-.filter-tab.active {
-    background-color: red; 
+.filter-tab.active
+{
+    background-color: red;
+}
+
+.full-path
+{
+    margin-top: 35px;
+    overflow: hidden;
+}
+
+.path-space
+{
+    float: right;
+    height: 10px;
+    width: 10px;
+}
+
+.path
+{
+    float: right;
+    color: rgb(6, 181, 240);
+}
+
+.current-category
+{
+    float: right;
+}
+
+.current-category, .filter-path li {
+    color: rgb(54, 132, 204);
+    font-weight: bold;
+}
+
+.filter-path li
+{
+    display: inline;
+    margin: 15px;
+    line-height: 20px;
+}
+
+.filter-path ,.clear-filter-path{
+    float: right;
+}
+
+.clear-filter-path
+{
+    position: relative;
+    width: 70px;
 }
