--- a/app/css/app.css
+++ b/app/css/app.css
@@ -166,12 +166,10 @@ form
     padding: 0;
 }
 
-.search-button input[type=submit]
+input[type=submit].search-button
 {
     color: white;
     background-color: #333;
-    width: 100%;
-    height: 100%;
     border: none;
     border-radius: 4px 0 0 4px;
 }
@@ -181,7 +179,7 @@ form
     margin-left: 60px;
 }
 
-.search-button
+input[type=submit].search-button
 {
     position: absolute;
     left: 0;
