--- a/views/search.html
+++ b/views/search.html
@@ -1,6 +1,5 @@
-﻿
-<div class="search-page">
-    
+﻿<div class="search-page">
+
     <div class="full-path">
         <div class="path">{{fullPath.path}}</div>
         <div class="path-space"></div>
@@ -30,5 +29,4 @@
      <h4 class="products-list-name">{{category.name}}</h4>
     <products-list-items products="currentProductsPage" show-product="showProduct(product)"></products-list-items>
     <products-list-navigation step="{{step}}" products-list-length="{{category.products.length}}" navigation-info="navigationInfo"></products-list-navigation>
-    
 </div>-->
