--- a/app/css/app.css
+++ b/app/css/app.css
@@ -294,6 +294,7 @@ input[type=submit].search-button
 .search-page .products-list-container
 {
     top: 80px;
+
 }
 
 .search-page .right-arrow, .search-page .left-arrow
@@ -565,6 +566,7 @@ div, i
     position: absolute;
     left: 10px;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .somethingSelected .category-container
@@ -763,6 +765,14 @@ div, i
     border-top-left-radius: 4px;
 }
 
+.filter-tab.disable a {
+    color: gray;
+}
+
+.filter-tab.disable {
+    pointer-events: none;
+}
+
 .main-promotion .nav-tabs .active a
 {
     color: rgb(6, 181, 240);
@@ -850,53 +860,38 @@ div, i
     margin-bottom: 13px;
 }
 
-.filter-tab.active
-{
-    background-color: red;
-}
-
 .full-path
 {
     margin-top: 35px;
-    overflow: hidden;
 }
 
-.path-space
-{
-    float: right;
-    height: 10px;
-    width: 10px;
+.full-path li, .filter-path li {
+    display: inline;
 }
 
-.path
+.ancestor, .parent, .main-bread-cramb a
 {
-    float: right;
     color: rgb(6, 181, 240);
 }
 
-.current-category
-{
-    float: right;
+.main-bread-cramb a:hover {
+    text-decoration: none;
 }
 
-.current-category, .filter-path li {
+.current-category, .filter-path .filters-on-path {
     color: rgb(54, 132, 204);
     font-weight: bold;
 }
 
-.filter-path li
+.filter-path span {
+    color: #bbb;
+    font-weight: 100;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.clear-filter-path .clear-filter
 {
     display: inline;
-    margin: 15px;
-    line-height: 20px;
-}
-
-.filter-path ,.clear-filter-path{
-    float: right;
-}
-
-.clear-filter-path
-{
-    position: relative;
-    width: 70px;
+    position: inherit;
 }
