--- a/views/search.html
+++ b/views/search.html
@@ -1,5 +1,7 @@
 ﻿<div class="search-page">
-
+    
+    <div class="compare-link" ng-show="!isProductSelected()" ng-click="toggleComparison()">לחץ להשוואת מוצרים</div>
+    <div class="compare-link" ng-show="isProductSelected()" ng-click="openCamperisonPage()">עבור לדף השוואת מוצרים</div>
     <ul class="full-path">
         <li class="main-bread-cramb"><a href="#"> {{fullPath.mainBreadCramb}} </a></li>
         <li class="ancestor" ng-click="selectCategoryByPath(fullPath.ancestor)">{{fullPath.ancestor}}</li>
@@ -21,8 +23,8 @@
 
     <div class="products-list-container clear">
         <div class="products-list-content" ng-show="productsLine1.length">
-            <products-list-items products="currentProductsPage1" show-product="showProduct(product)"></products-list-items>
-            <products-list-items products="currentProductsPage2" show-product="showProduct(product)"></products-list-items>
+            <products-list-items products="currentProductsPage1" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection"></products-list-items>
+            <products-list-items products="currentProductsPage2" show-product="showProduct(product)" selection-mode="selectionMode" selected-items="productsToCompare" max-selection="maxSelection"></products-list-items>
         </div>
     </div>
     
